--- a/ScheduleFrontend/src/app/Security/role/role.component.html
+++ b/ScheduleFrontend/src/app/Security/role/role.component.html
@@ -1,29 +1,29 @@
 <div class="container mt-5">
-    <!-- Formulario de Registro -->
-    <h2 class="text-center mb-4">Registrar Rol</h2>
-    <form id="moduloForm">
-      <div class="mb-3">
-        <label for="name" class="form-label">Nombre:</label>
-        <input type="text" id="name" class="form-control" required>
-      </div>
-      <div class="mb-3">
-        <label for="description" class="form-label">Descripción:</label>
-        <textarea id="description" class="form-control" rows="4" required></textarea>
-      </div>
-      <div class="mb-3">
-        <label for="code" class="form-label">Código:</label>
-        <input type="text" id="code" class="form-control" required>
-      </div>
-      <<div class="modal-footer d-flex justify-content-center">
-        <button type="button" class="btn btn-primary" id="saveProduct"
-            onclick="Save()">Guardar</button>
+  <!-- Formulario de Registro -->
+  <h2 class="text-center mb-4">Registrar Rol</h2>
+  <form id="roleForm">
+    <div class="mb-3">
+      <label for="name" class="form-label">Nombre:</label>
+      <input type="text" id="name" class="form-control" required>
     </div>
-    </form>
-  </div>
+    <div class="mb-3">
+      <label for="description" class="form-label">Descripción:</label>
+      <textarea id="description" class="form-control" rows="4" required></textarea>
+    </div>
+    <div class="mb-3">
+      <label for="code" class="form-label">Código:</label>
+      <input type="text" id="code" class="form-control" required>
+    </div>
+    <div class="modal-footer d-flex justify-content-center">
+      <button type="button" class="btn btn-primary" id="saveRole" onclick="Save()">Guardar</button>
+    </div>
+  </form>
+</div>
 
-  <!-- Tabla para Mostrar los Roles -->
-  <div class="container mt-5">
-    <h2 class="text-center mb-4">Lista de Roles</h2>
+<!-- Tabla para Mostrar los Roles -->
+<div class="table-container mt-5">
+  <h2 class="text-center mb-4">Lista de Roles</h2>
+  <div class="table-responsive">
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
@@ -33,12 +33,22 @@
           <th>Opciones</th>
         </tr>
       </thead>
-      <tbody id="moduloDataResult">
+      <tbody id="roleDataResult">
         <!-- Aquí se cargará la lista de Roles -->
+        <tr>
+          <td>Rol de Ejemplo</td>
+          <td>Descripción del rol de ejemplo.</td>
+          <td>ROL123</td>
+          <td>
+            <button class="btn btn-sm btn-warning me-2">
+              <i class="bi bi-pencil-square"></i>
+            </button>
+            <button class="btn btn-sm btn-danger">
+              <i class="bi bi-trash"></i>
+            </button>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
-
- 
-
-
+</div>
