--- a/ScheduleFrontend/src/app/Security/user/user.component.html
+++ b/ScheduleFrontend/src/app/Security/user/user.component.html
@@ -1,1 +1,56 @@
-<p>user works!</p>
+<div class="container mt-5">
+    <!-- Formulario de Registro -->
+    <h2 class="text-center mb-4">Registrar Usuario</h2>
+    <form id="userForm">
+      <div class="mb-3">
+        <label for="username" class="form-label">Nombre de Usuario:</label>
+        <input type="text" id="username" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Contraseña:</label>
+        <input type="password" id="password" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="personId" class="form-label">Persona:</label>
+        <select id="personId" class="form-control" required>
+          <option value="" disabled selected>Seleccione una persona</option>
+          <!-- Aquí se cargarán las opciones de personas -->
+        </select>
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button type="button" class="btn btn-primary" id="saveUser" onclick="Save()">Guardar</button>
+      </div>
+    </form>
+  </div>
+  
+ <!-- Tabla para Mostrar los Usuarios -->
+<div class="table-container mt-5">
+  <h2 class="text-center mb-4">Lista de Usuarios</h2>
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Nombre de Usuario</th>
+          <th>Persona</th>
+          <th>Opciones</th>
+        </tr>
+      </thead>
+      <tbody id="userDataResult">
+        <!-- Aquí se cargará la lista de Usuarios -->
+        <tr>
+          <td>MarGonzalez</td>
+          <td>Maryury Gonzalez/td>
+          <td>
+            <button class="btn btn-sm btn-warning me-2">
+              <i class="bi bi-pencil-square"></i>
+            </button>
+            <button class="btn btn-sm btn-danger">
+              <i class="bi bi-trash"></i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+  
