--- a/ScheduleFrontend/src/app/Pages/menu/menu.component.html
+++ b/ScheduleFrontend/src/app/Pages/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="sidebar">
+<nav class="sidebar" [ngStyle]="{'background-color': '#004455'}">
   <ul class="menu">
     <li *ngFor="let modulo of modulos">
       <a href="javascript:void(0)">
