--- a/ScheduleFrontend/src/styles.css
+++ b/ScheduleFrontend/src/styles.css
@@ -1,3 +1,5 @@
+@import "~@ng-select/ng-select/themes/default.theme.css";
+
 body, html {
     margin: 0;
     padding: 0;
@@ -20,4 +22,11 @@ body, html {
   }
   
   
+  .ng-select {
+    border-radius: 5px; /* Redondea los bordes */
+  }
+  
+  .ng-select .ng-select-container {
+    min-height: 40px; /* Ajusta la altura mínima */
+  }
   
