--- a/ScheduleFrontend/src/app/Parametrizacion/Ubicacion/pais/pais.component.html
+++ b/ScheduleFrontend/src/app/Parametrizacion/Ubicacion/pais/pais.component.html
@@ -16,7 +16,7 @@
         <div formGroupName="continenteId">
             <ng-select 
               [items]="continentes"
-              bindLabel="nombre" 
+              bindLabel="nombreCompleto" 
               bindValue="id" 
               formControlName="id"
               placeholder="Seleccione un continente"
