--- a/ScheduleFrontend/src/app/Componentes/table/table.component.html
+++ b/ScheduleFrontend/src/app/Componentes/table/table.component.html
@@ -1,20 +1,24 @@
 <table class="table table-striped table-bordered">
-    <thead>
-      <tr>
-        <th *ngFor="let header of headers">{{ header }}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of data">
-        <td>{{ item.nombre }}</td>
-        <td>{{ item.codigo }}</td>
-        <td>{{ item.continenteId?.nombre }}</td>
-        <td>{{ item.state ? 'Activo' : 'Inactivo' }}</td>
-        <td>
-          <button (click)="onEdit(item)" class="btn btn-primary btn-sm">Editar</button>
-          <button (click)="onDelete(item.id)" class="btn btn-danger btn-sm">Eliminar</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  
+  <thead>
+    <tr>
+      <th *ngFor="let header of headers">{{ header.title }}</th>
+      <th>Opciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of data">
+      <td *ngFor="let header of headers">
+        <ng-container *ngIf="header.field !== 'state'; else stateTemplate">
+          {{ getNestedValue(item, header.field) }}
+        </ng-container>
+        <ng-template #stateTemplate>
+          {{ getNestedValue(item, header.field) ? 'Activo' : 'Inactivo' }}
+        </ng-template>
+      </td>
+      <td>
+        <button (click)="onEdit(item)" class="btn btn-primary btn-sm">Editar</button>
+        <button (click)="onDelete(item.id)" class="btn btn-danger btn-sm">Eliminar</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
