--- a/ScheduleFrontend/src/app/Componentes/Parametrizacion/Infraestructura/regional/regional.component.html
+++ b/ScheduleFrontend/src/app/Componentes/Parametrizacion/Infraestructura/regional/regional.component.html
@@ -1,1 +1,47 @@
-<p>regional works!</p>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">{{ isEditing ? 'Editar Regional' : 'Registrar Regional' }}</h2>
+  
+    <!-- Formulario para Crear/Editar Regional -->
+    <form [formGroup]="regionalForm" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+        <label for="nit" class="form-label">NIT:</label>
+        <input type="text" id="nit" class="form-control" formControlName="nit" required>
+      </div>
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre:</label>
+        <input type="text" id="nombre" class="form-control" formControlName="nombre" required>
+      </div>
+      <div class="mb-3">
+        <label for="acronimo" class="form-label">Acrónimo:</label>
+        <input type="text" id="acronimo" class="form-control" formControlName="acronimo" required>
+      </div>
+      <div class="mb-3">
+        <label for="direccion" class="form-label">Dirección:</label>
+        <input type="text" id="direccion" class="form-control" formControlName="direccion" required>
+      </div>
+      <div class="mb-3">
+        <label for="telefono" class="form-label">Teléfono:</label>
+        <input type="text" id="telefono" class="form-control" formControlName="telefono" required>
+      </div>
+      <div class="mb-3">
+        <label for="estado" class="form-label">Estado:</label>
+        <div class="form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="estado" formControlName="state">
+          <label class="form-check-label" for="estado">{{ regionalForm.get('state')?.value ? 'Activo' : 'Inactivo' }}</label>
+        </div>
+      </div>
+  
+      <div class="modal-footer d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary">{{ isEditing ? 'Actualizar' : 'Guardar' }}</button>
+      </div>
+    </form>
+  </div>
+  
+  <!-- Tabla de Regionales -->
+  <div class="table-container mt-5">
+    <h2 class="text-center mb-4">Lista de Regionales</h2>
+    <div class="table-responsive">
+      <app-table [headers]="headers" [data]="regionales" (edit)="editRegional($event)" (delete)="deleteRegional($event)"></app-table>
+    </div>
+  </div>
+  
