--- a/ScheduleFrontend/src/app/Componentes/Parametrizacion/Infraestructura/sede/sede.component.html
+++ b/ScheduleFrontend/src/app/Componentes/Parametrizacion/Infraestructura/sede/sede.component.html
@@ -1,1 +1,52 @@
-<p>sede works!</p>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">{{ isEditing ? 'Editar Sede' : 'Registrar Sede' }}</h2>
+  
+    <!-- Formulario para Crear/Editar Sede -->
+    <form [formGroup]="sedeForm" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre de la Sede:</label>
+        <input type="text" id="nombre" class="form-control" formControlName="nombre" required>
+      </div>
+      <div class="mb-3">
+        <label for="codigo" class="form-label">Código:</label>
+        <input type="text" id="codigo" class="form-control" formControlName="codigo" required>
+      </div>
+      <div class="mb-3">
+        <label for="direccion" class="form-label">Dirección:</label>
+        <input type="text" id="direccion" class="form-control" formControlName="direccion" required>
+      </div>
+      <div class="mb-3">
+        <label for="centroFormacion" class="form-label">Centro de Formación:</label>
+        <div formGroupName="centroFormacionId">
+          <ng-select
+            [items]="centrosFormacion"
+            bindLabel="nombre"
+            bindValue="id"
+            formControlName="id"
+            placeholder="Seleccione un centro de formación"
+            required>
+          </ng-select>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="estado" class="form-label">Estado:</label>
+        <div class="form-check form-switch">
+          <input type="checkbox" class="form-check-input" id="estado" formControlName="state">
+          <label class="form-check-label" for="estado">{{ sedeForm.get('state')?.value ? 'Activo' : 'Inactivo' }}</label>
+        </div>
+      </div>
+  
+      <div class="modal-footer d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary">{{ isEditing ? 'Actualizar' : 'Guardar' }}</button>
+      </div>
+    </form>
+  </div>
+  
+  <!-- Tabla de Sedes -->
+  <div class="table-container mt-5">
+    <h2 class="text-center mb-4">Lista de Sedes</h2>
+    <div class="table-responsive">
+      <app-table [headers]="headers" [data]="sedes" (edit)="editSede($event)" (delete)="deleteSede($event)"></app-table>
+    </div>
+  </div>
+  
